--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: oel-yous <oel-yous@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/09/07 11:35:34 by oel-yous          #+#    #+#              #
-#    Updated: 2021/09/12 15:24:32 by oel-yous         ###   ########.fr        #
+#    Updated: 2021/09/14 11:17:24 by oel-yous         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,10 +16,12 @@ NAME = philo
 
 SRCS =	main.c\
 		tools.c\
+		init.c\
 		routine.c\
+		supervisor.c\
+		destroy.c\
 		
-
-FLAGS = -g -Wall -Werror -Wextra -pthread 
+FLAGS = -Wall -Werror -Wextra -pthread 
 
 all:		$(NAME)
 
@@ -30,7 +32,6 @@ $(NAME):	$(SRCS)
 
 clean:
 			@rm -rf *.o
-			
 fclean: clean
 			@rm -rf $(NAME)
 
